@@ -43,15 +43,14 @@ Dynamic clamp:
 - localmodconfig kernel make target might be very interesting for generating a rtai kernel:
   http://www.heise.de/open/artikel/Linux-Kernel-massgeschneidert-1402386.html
 - autoconf script: check for presence of rtai-config and whether -r option is supported!
-- Add timing traces and status traces to dynamic clamp simulation!
-- matchTraces should set error string of device, and this should be used by relacswidget
-- restart in dynclamp mode is not properly processed??? (check inputrangecheck, follow up outputs seem to be changed)
-- DynClamAnalogInput improve error checking in readData()
 - Always create a new channel list!
   Then we do not need to reset all the channels at startup (Aquire::writeReset() )
 - Is it really necessary that the dynclamp parameter are all set to zero by relacs initially?
   It shoud be sufficient to set the AOs to zero and the parameters to their initial vallues.
   For the latter we might need some support (saving the initial values to some array prior to starting, etc.)
+- matchTraces should set error string of device, and this should be used by relacswidget
+- restart in dynclamp mode is not properly processed??? (check inputrangecheck, follow up outputs seem to be changed)
+- DynClamAnalogInput improve error checking in readData()
 - Add a variable lastInterval that is set to the current period length in addition to loopInterval
 - CHECK IT! Both kernel modules, optional trigger, and DynClampAnalogOutput
 - include of asm-offsets.h in src/Makefile.am could be made part of a
