@@ -79,7 +79,7 @@
           storewidth: false
 
 *AudioMonitor
-  device   : [ "-1 default", "0 HDA Intel PCH: CX20642 Analog (hw:0,0) (2 channels)", "3 sysdefault (128 channels)", "4 front (2 channels)", "5 surround40 (2 channels)", "6 surround51 (2 channels)", "7 surround71 (2 channels)", "8 pulse (32 channels)", "9 dmix (2 channels)", "10 default (32 channels) - default" ]
+  device   : [ "-1 default", "0 HDA Intel PCH: ALC3202 Analog (hw:0,0) (4 channels)", "1 HDA Intel PCH: HDMI 0 (hw:0,3) (8 channels)", "2 HDA Intel PCH: HDMI 1 (hw:0,7) (8 channels)", "3 HDA Intel PCH: HDMI 2 (hw:0,8) (8 channels)", "4 sysdefault (128 channels)", "5 front (4 channels)", "6 surround40 (4 channels)", "7 surround51 (4 channels)", "8 surround71 (4 channels)", "9 hdmi (8 channels)", "10 pulse (32 channels)", "11 dmix (2 channels)", "12 default (32 channels) - default" ]
   enable   : true
   mute     : false
   gain     : 1
