@@ -50,7 +50,7 @@
   fallbackonreload: true
 
 *AudioMonitor
-  device   : [ "-1 default", "0 HDA Intel PCH: CONEXANT Analog (hw:0,0) (2 channels)", "2 sysdefault (128 channels)", "3 front (2 channels)", "4 surround40 (2 channels)", "5 surround51 (2 channels)", "6 surround71 (2 channels)", "7 pulse (32 channels)", "8 dmix (2 channels)", "9 default (32 channels) - default" ]
+  device   : [ "-1 default", "0 HDA Intel PCH: ALC3202 Analog (hw:0,0) (4 channels)", "1 HDA Intel PCH: HDMI 0 (hw:0,3) (8 channels)", "2 HDA Intel PCH: HDMI 1 (hw:0,7) (8 channels)", "3 HDA Intel PCH: HDMI 2 (hw:0,8) (8 channels)", "4 sysdefault (128 channels)", "5 front (4 channels)", "6 surround40 (4 channels)", "7 surround51 (4 channels)", "8 surround71 (4 channels)", "9 hdmi (8 channels)", "10 pulse (32 channels)", "11 dmix (2 channels)", "12 default (32 channels) - default" ]
   enable   : false
   mute     : false
   gain     : 1
